--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,18 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical"
 	tools:context=".MainActivity">
+	<View android:layout_width="match_parent" android:layout_height="66dp"/>
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:onClick="sendBroadcast"
 		android:text="Send notification!"
-		android:textSize="26sp"
-		android:onClick="sendBroadcast"/>
+		android:textSize="26sp"/>
+	<View android:layout_width="match_parent" android:layout_height="66dp"/>
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:onClick="sendBroadcastV4"
 		android:text="Send notification V4!"
-		android:textSize="26sp"
-		android:onClick="sendBroadcastV4"/>
+		android:textSize="26sp"/>
 </LinearLayout>
